force-app/main/default/objects/WSM_Capacity_Query__c/WSM_Capacity_Query__c.object-meta.xml
<CustomObject>
    <description>One admin-defined count of existing org records, used as a hard cap and/or a load metric for the members of a Round Robin Group. Example: "Contracted or Pending Schedule Accounts owned by this member". The engine turns each active row into exactly ONE aggregate COUNT query grouped by the owner field, so the query footprint is flat no matter how many members the group has. Only counts are ever read back, never record field values. Child of the group via Master-Detail so the config is deleted along with its group.</description>
    <label>Capacity Query</label>
    <nameField>
        <displayFormat>CAPQ-{00000}</displayFormat>
        <label>Capacity Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>