force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Active__c.field-meta.xml
<CustomField>
    <fullName>WSM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to stop this capacity query being evaluated without deleting it and losing its filters. Inactive rows cost no query.</description>
    <inlineHelpText>Uncheck to turn this count off without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>