force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Cap__c.field-meta.xml
<CustomField>
    <fullName>WSM_Cap__c</fullName>
    <description>Maximum count before this member is skipped. Only read when Role includes Cap. A cap of 0 blocks the member outright. Leave blank to make a Cap-role row effectively uncapped, which is only useful while testing.</description>
    <inlineHelpText>Block the member once the count reaches this number.</inlineHelpText>
    <label>Cap</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>