force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Description__c.field-meta.xml
<CustomField>
    <fullName>WSM_Description__c</fullName>
    <description>Optional note explaining why this count exists, so the next admin does not have to reverse-engineer the intent from the filters.</description>
    <inlineHelpText>Why this count exists. Future you will thank present you.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>