force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>WSM_Filter_Logic__c</fullName>
    <description>How the child Capacity Filter rows combine, written the same way Flow writes it, e.g. 1 AND 2 AND (3 OR 4) where each number is a filter&apos;s Filter Number. Leave blank to AND every filter together. Only the numbers present on the child rows, the words AND and OR, and parentheses are accepted.</description>
    <inlineHelpText>e.g. 1 AND 2 AND (3 OR 4). Blank means AND everything.</inlineHelpText>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>