force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Group__c.field-meta.xml
<CustomField>
    <fullName>WSM_Group__c</fullName>
    <description>The Round Robin Group this capacity query belongs to. Deleting the group deletes its capacity queries.</description>
    <inlineHelpText>Parent group this capacity rule applies to.</inlineHelpText>
    <label>Group</label>
    <referenceTo>WSM_Round_Robin_Group__c</referenceTo>
    <relationshipLabel>Capacity Queries</relationshipLabel>
    <relationshipName>Capacity_Queries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>