force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Label__c.field-meta.xml
<CustomField>
    <fullName>WSM_Label__c</fullName>
    <description>Friendly name for this count, used verbatim in skip reasons and in the simulator, e.g. Active Employers. Keep it short and readable: admins will see it in messages like &quot;At capacity on Active Employers (38/20)&quot;.</description>
    <inlineHelpText>Short name for this count. Shows up in skip reasons and the simulator.</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>