force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Load_Weight__c.field-meta.xml
<CustomField>
    <fullName>WSM_Load_Weight__c</fullName>
    <description>Multiplier applied to this count when several Load Metric rows are combined into one load score. Defaults to 1. Use 2 to make one count matter twice as much as another, or 0.5 to make it matter half as much. Ignored when Role is Cap only.</description>
    <inlineHelpText>How much this count counts toward the load score. 1 is normal.</inlineHelpText>
    <label>Load Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>