force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Object__c.field-meta.xml
<CustomField>
    <fullName>WSM_Object__c</fullName>
    <description>API name of the object to count, e.g. Account or Lead. Validated against the org schema before any query runs; an unresolvable name makes this capacity query invalid and it is skipped with a warning rather than failing the assignment.</description>
    <inlineHelpText>API name of the object to count, e.g. Account.</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>