force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>WSM_Owner_Field__c</fullName>
    <description>API name of the field on the counted object that holds the member&apos;s User Id. Defaults to OwnerId when blank. Set this to count by a custom lookup instead of record ownership, e.g. Enrollment_Counselor__c. Must be a lookup to User or an Id/Text field holding User Ids.</description>
    <inlineHelpText>Field holding the member&apos;s User Id. Leave blank for OwnerId.</inlineHelpText>
    <label>Owner Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>