force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Role__c.field-meta.xml
<CustomField>
    <fullName>WSM_Role__c</fullName>
    <description>What this count is used for. Cap blocks a member once the count reaches Cap. Load Metric feeds the Least Loaded algorithm&apos;s ranking so the member with the least existing work wins. Cap and Load Metric does both from a single query.</description>
    <inlineHelpText>Cap blocks members at a limit. Load Metric decides who is least busy.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cap</fullName>
                <default>true</default>
                <label>Cap</label>
            </value>
            <value>
                <fullName>Load Metric</fullName>
            </value>
            <value>
                <fullName>Cap and Load Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>