force-app/main/default/objects/WSM_Capacity_Query__c/fields/WSM_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>WSM_Sort_Order__c</fullName>
    <description>Display order in the admin UI. Does not affect evaluation: every active capacity query is always evaluated.</description>
    <inlineHelpText>Display order in the admin screens.</inlineHelpText>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>